--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="col-sm-6">
         <div class="button1"> <span class="try"><strong>Try it free 7 days</strong></span> then $20/mo. thereafter</div>
         <div class="box">
-          <form>
+          <div>
             <div class="form-group fname">
               <input type="text" class="inp" placeholder="First Name"><img class="wrong hidden" src="images/icon-error.svg" alt="">
               <small class="error hidden">First Name cannot be empty</small>
@@ -41,7 +41,7 @@
               <input type="password" class="inp" placeholder="Password"><img class="wrong hidden" src="images/icon-error.svg" alt="">
               <small class="error hidden">Password cannot be empty</small>
             </div>
-          </form>
+          </div>
           <div class="button2">CLAIM YOUR FREE TRIAL</div><br>
           <small>By clicking the button, you are agreeing to our <span><a class="terms" href="#">Terms and Services</a></span></small>
         </div>
